--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             <li class="footer__menu-item"><a href="#">CONTACT</a></li>
           </ul>
         </div>
-        <form class="input-group mb-3 subscribe">
+        <form method="post" class="input-group mb-3 subscribe">
           <input
             type="email"
             class="form-control"
